hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__tail_loop@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1() !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"7_0" = alloca i64, align 8
  %"5_0" = alloca i64, align 8
  %"8_0" = alloca i64, align 8
  %"9_0" = alloca i64, align 8
  %"9_1" = alloca i64, align 8
  %"17_0" = alloca { i1, i64 }, align 8
  %"16_0" = alloca i64, align 8
  %"15_0" = alloca i64, align 8
  %"12_0" = alloca i64, align 8
  %"13_0" = alloca i1, align 1
  %"011" = alloca { i1, i64 }, align 8
  %"013" = alloca i64, align 8
  %"23_0" = alloca i64, align 8
  %"20_0" = alloca i64, align 8
  %"24_0" = alloca i64, align 8
  %"25_0" = alloca { i1, i64 }, align 8
  %"019" = alloca i64, align 8
  %"29_0" = alloca { i1, i64 }, align 8
  %"27_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 7, ptr %"7_0", align 4
  store i64 3, ptr %"5_0", align 4
  %"5_01" = load i64, ptr %"5_0", align 4
  %"7_02" = load i64, ptr %"7_0", align 4
  store i64 %"5_01", ptr %"9_0", align 4
  store i64 %"7_02", ptr %"9_1", align 4
  br label %loop_body

loop_body:                                        ; preds = %8, %entry_block
  %"9_03" = load i64, ptr %"9_0", align 4
  %"9_14" = load i64, ptr %"9_1", align 4
  store i64 2, ptr %"15_0", align 4
  store i64 0, ptr %"12_0", align 4
  store i64 %"9_03", ptr %"9_0", align 4
  store i64 %"9_14", ptr %"9_1", align 4
  %"9_15" = load i64, ptr %"9_1", align 4
  %"15_06" = load i64, ptr %"15_0", align 4
  %0 = mul i64 %"9_15", %"15_06", !dbg !8
  store i64 %0, ptr %"16_0", align 4, !dbg !8
  %"9_07" = load i64, ptr %"9_0", align 4
  %"12_08" = load i64, ptr %"12_0", align 4
  %1 = icmp eq i64 %"9_07", %"12_08", !dbg !9
  %2 = select i1 %1, i1 true, i1 false, !dbg !9
  store i1 %2, ptr %"13_0", align 1, !dbg !9
  %"13_09" = load i1, ptr %"13_0", align 1
  %"9_010" = load i64, ptr %"9_0", align 4
  switch i1 %"13_09", label %3 [
    i1 true, label %4
  ]

3:                                                ; preds = %loop_body
  store i64 %"9_010", ptr %"013", align 4
  br label %cond_17_case_0

4:                                                ; preds = %loop_body
  store i64 %"9_010", ptr %"019", align 4
  br label %cond_17_case_1

loop_out:                                         ; preds = %10
  %"8_026" = load i64, ptr %"8_0", align 4
  store i64 %"8_026", ptr %"0", align 4
  %"027" = load i64, ptr %"0", align 4
  ret i64 %"027"

cond_17_case_0:                                   ; preds = %3
  %"014" = load i64, ptr %"013", align 4
  store i64 1, ptr %"23_0", align 4
  store i64 %"014", ptr %"20_0", align 4
  %"20_015" = load i64, ptr %"20_0", align 4
  %"23_016" = load i64, ptr %"23_0", align 4
  %5 = sub i64 %"20_015", %"23_016", !dbg !10
  store i64 %5, ptr %"24_0", align 4, !dbg !10
  %"24_017" = load i64, ptr %"24_0", align 4
  %6 = insertvalue { i1, i64 } { i1 false, i64 poison }, i64 %"24_017", 1
  store { i1, i64 } %6, ptr %"25_0", align 4
  %"25_018" = load { i1, i64 }, ptr %"25_0", align 4
  store { i1, i64 } %"25_018", ptr %"011", align 4
  br label %cond_exit_17

cond_17_case_1:                                   ; preds = %4
  %"020" = load i64, ptr %"019", align 4
  store { i1, i64 } { i1 true, i64 poison }, ptr %"29_0", align 4
  %"29_021" = load { i1, i64 }, ptr %"29_0", align 4
  store { i1, i64 } %"29_021", ptr %"011", align 4
  store i64 %"020", ptr %"27_0", align 4
  br label %cond_exit_17

cond_exit_17:                                     ; preds = %cond_17_case_1, %cond_17_case_0
  %"012" = load { i1, i64 }, ptr %"011", align 4
  store { i1, i64 } %"012", ptr %"17_0", align 4
  %"17_022" = load { i1, i64 }, ptr %"17_0", align 4
  %"16_023" = load i64, ptr %"16_0", align 4
  store { i1, i64 } %"17_022", ptr %"17_0", align 4
  store i64 %"16_023", ptr %"16_0", align 4
  %"17_024" = load { i1, i64 }, ptr %"17_0", align 4
  %"16_025" = load i64, ptr %"16_0", align 4
  %7 = extractvalue { i1, i64 } %"17_024", 0
  switch i1 %7, label %8 [
    i1 true, label %10
  ]

8:                                                ; preds = %cond_exit_17
  %9 = extractvalue { i1, i64 } %"17_024", 1
  store i64 %9, ptr %"9_0", align 4
  store i64 %"16_025", ptr %"9_1", align 4
  br label %loop_body

10:                                               ; preds = %cond_exit_17
  store i64 %"16_025", ptr %"8_0", align 4
  br label %loop_out
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/VYeXFfvzCkHdtWCCnkJhPKiW/KICgZuRNRvRJ.gpy.py", directory: "/hvZsHeDgUnyeIVwAutKJHaZEPSZ/PXPeycUvnujGxZKPRCTcNfsTEGLoP/CKHhM/mzeCBZoPGeHBxpWCFCAIgmDOGX/yQmUZGJneRvyjSLkxZjvaVMrckAfo/SeQfNL")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/VYeXFfvzCkHdtWCCnkJhPKiW/KICgZuRNRvRJ.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 23467, column: 27, scope: !3)
!9 = !DILocation(line: 6962, column: 212, scope: !3)
!10 = !DILocation(line: 5299, column: 65, scope: !3)
