hugr-llvm/src/emit/snapshots/hugr_llvm__emit__test__test_fns__tail_loop_simple@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/emit/test.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal {} @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca {}, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca {}, align 8
  %"5_0" = alloca i64, align 8
  %"7_0" = alloca { i1, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  store i64 %"2_01", ptr %"5_0", align 4
  br label %loop_body

loop_body:                                        ; preds = %3, %entry_block
  %"5_02" = load i64, ptr %"5_0", align 4
  store i64 %"5_02", ptr %"5_0", align 4
  %"5_03" = load i64, ptr %"5_0", align 4
  %1 = insertvalue { i1, i64 } { i1 false, i64 poison }, i64 %"5_03", 1
  store { i1, i64 } %1, ptr %"7_0", align 4
  %"7_04" = load { i1, i64 }, ptr %"7_0", align 4
  store { i1, i64 } %"7_04", ptr %"7_0", align 4
  %"7_05" = load { i1, i64 }, ptr %"7_0", align 4
  %2 = extractvalue { i1, i64 } %"7_05", 0
  switch i1 %2, label %3 [
    i1 true, label %5
  ]

3:                                                ; preds = %loop_body
  %4 = extractvalue { i1, i64 } %"7_05", 1
  store i64 %4, ptr %"5_0", align 4
  br label %loop_body

5:                                                ; preds = %loop_body
  store {} undef, ptr %"4_0", align 1
  br label %loop_out

loop_out:                                         ; preds = %5
  %"4_06" = load {}, ptr %"4_0", align 1
  store {} %"4_06", ptr %"0", align 1
  %"07" = load {}, ptr %"0", align 1
  ret {} %"07"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/PNzlVLClAphFGIyrhvZsHeD")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25761, type: !5, scopeLine: 25762, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{}", file: !2, align: 8, elements: !8)
!8 = !{}
!9 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
